assemblydir = $(libdir)/mono/tao

assembly_DATA = \
	Tao.OpenGl.ExtensionLoader/Tao.OpenGl.ExtensionLoader.dll \
	Tao.OpenGl.ExtensionLoader/Tao.OpenGl.ExtensionLoader.dll.config \
	Tao.OpenGl/Tao.OpenGl.dll \
	Tao.OpenGl/Tao.OpenGl.dll.config \
	Tao.Cg/Tao.Cg.dll \
	Tao.Cg/Tao.Cg.dll.config \
	Tao.DevIl/Tao.DevIl.dll \
	Tao.DevIl/Tao.DevIl.dll.config \
	Tao.FreeGlut/Tao.FreeGlut.dll \
	Tao.FreeGlut/Tao.FreeGlut.dll.config \
	Tao.Glfw/Tao.Glfw.dll \
	Tao.Glfw/Tao.Glfw.dll.config \
	Tao.Ode/Tao.Ode.dll \
	Tao.Ode/Tao.Ode.dll.config \
	Tao.OpenAl/Tao.OpenAl.dll \
	Tao.OpenAl/Tao.OpenAl.dll.config \
	Tao.OpenGl.Glu/Tao.OpenGl.Glu.dll \
	Tao.OpenGl.Glu/Tao.OpenGl.Glu.dll.config \
	Tao.Sdl/Tao.Sdl.dll \
	Tao.Sdl/Tao.Sdl.dll.config
	Tao.PhysFs/Tao.PhysFs.dll \
	Tao.PhysFs/Tao.PhysFs.dll.config
	Tao.Platform.Windows/Tao.Platform.Windows.dll \
	Tao.Platform.Windows/Tao.Platform.Windows.dll.config

SUBDIRS = \
        Tao.OpenGl.ExtensionLoader \
	Tao.GlPostProcess \
	Tao.OpenGl \
	Tao.Cg \
	Tao.DevIl \
	Tao.FreeGlut \
	Tao.Glfw \
	Tao.Ode \
	Tao.OpenAl \
	Tao.OpenGl.Glu \
	Tao.PostProcess \
	Tao.Sdl \
	Tao.PhysFs \
	Tao.Platform.Windows
